tests/baselines/reference/declarationEmitLateBoundAssignments2.errors.txt
declarationEmitLateBoundAssignments2.ts(40,1): error TS7053: Element implicitly has an 'any' type because expression of type '"B"' can't be used to index type '() => void'.
  Property 'B' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(46,1): error TS7053: Element implicitly has an 'any' type because expression of type '77' can't be used to index type '() => void'.
  Property '77' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(52,1): error TS7053: Element implicitly has an 'any' type because expression of type '"101"' can't be used to index type '() => void'.
  Property '101' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(58,1): error TS7053: Element implicitly has an 'any' type because expression of type '"qwe rty"' can't be used to index type '() => void'.
  Property 'qwe rty' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(64,1): error TS7053: Element implicitly has an 'any' type because expression of type '"ðŸ¤ª"' can't be used to index type '() => void'.
  Property 'ðŸ¤ª' does not exist on type '() => void'.


==== declarationEmitLateBoundAssignments2.ts (5 errors) ====
    // https://github.com/microsoft/TypeScript/issues/54811
    
    const c = "C"
    const num = 1
    const numStr = "10"
    const withWhitespace = "foo bar"
    const emoji = "ðŸ¤·â€â™‚ï¸"
    
    export function decl() {}
    decl["B"] = 'foo'
    
    export function decl2() {}
    decl2[c] = 0
    
    export function decl3() {}
    decl3[77] = 0
    
    export function decl4() {}
    decl4[num] = 0
    
    export function decl5() {}
    decl5["101"] = 0
    
    export function decl6() {}
    decl6[numStr] = 0
    
    export function decl7() {}
    decl7["qwe rty"] = 0
    
    export function decl8() {}
    decl8[withWhitespace] = 0
    
    export function decl9() {}
    decl9["ðŸ¤ª"] = 0
    
    export function decl10() {}
    decl10[emoji] = 0
    
    export const arrow = () => {}
    arrow["B"] = 'bar'
    ~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"B"' can't be used to index type '() => void'.
!!! error TS7053:   Property 'B' does not exist on type '() => void'.
    
    export const arrow2 = () => {}
    arrow2[c] = 100
    
    export const arrow3 = () => {}
    arrow3[77] = 0
    ~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '77' can't be used to index type '() => void'.
!!! error TS7053:   Property '77' does not exist on type '() => void'.
    
    export const arrow4 = () => {}
    arrow4[num] = 0
    
    export const arrow5 = () => {}
    arrow5["101"] = 0
    ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"101"' can't be used to index type '() => void'.
!!! error TS7053:   Property '101' does not exist on type '() => void'.
    
    export const arrow6 = () => {}
    arrow6[numStr] = 0
    
    export const arrow7 = () => {}
    arrow7["qwe rty"] = 0
    ~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"qwe rty"' can't be used to index type '() => void'.
!!! error TS7053:   Property 'qwe rty' does not exist on type '() => void'.
    
    export const arrow8 = () => {}
    arrow8[withWhitespace] = 0
    
    export const arrow9 = () => {}
    arrow9["ðŸ¤ª"] = 0
    ~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"ðŸ¤ª"' can't be used to index type '() => void'.
!!! error TS7053:   Property 'ðŸ¤ª' does not exist on type '() => void'.
    
    export const arrow10 = () => {}
    arrow10[emoji] = 0
    